Implement dedicated RingBufferPoller, virtual thread per task executor, stream(), and PacketBuilder API ergonomics